force-app/main/default/objects/Member__c/fields/live_set_kbn__c.field-meta.xml
<CustomField>
    <fullName>live_set_kbn__c</fullName>
    <label>ライブオークション参加可否</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>判断中</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>参加可</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>参加不可</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>