force-app/main/default/objects/Member__c/fields/live_tuci_mail__c.field-meta.xml
<CustomField>
    <fullName>live_tuci_mail__c</fullName>
    <label>ライブ通知Email</label>
    <type>Email</type>
</CustomField>