force-app/main/default/objects/Member__c/fields/login_kbn__c.field-meta.xml
<CustomField>
    <fullName>login_kbn__c</fullName>
    <label>ログイン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>ログイン可</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>ログイン不可</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>