force-app/main/default/objects/Member__c/fields/mail2__c.field-meta.xml
<CustomField>
    <fullName>mail2__c</fullName>
    <label>Email2</label>
    <type>Email</type>
</CustomField>