force-app/main/default/objects/Member__c/fields/mail_Domain__c.field-meta.xml
<CustomField>
    <fullName>mail_Domain__c</fullName>
    <formula>RIGHT(
  mail__c,
  LEN(mail__c) - FIND(&quot;@&quot;, mail__c) + 1
)</formula>
    <label>メールドメイン</label>
    <type>Text</type>
</CustomField>