force-app/main/default/objects/Member__c/fields/mail_lang_kbn__c.field-meta.xml
<CustomField>
    <fullName>mail_lang_kbn__c</fullName>
    <label>Email設定言語</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>日本語</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>英語</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>ロシア語</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>スペイン語</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>中国語</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>