force-app/main/default/objects/Member__c/fields/main_tork_date__c.field-meta.xml
<CustomField>
    <fullName>main_tork_date__c</fullName>
    <label>本登録日</label>
    <type>Date</type>
</CustomField>