force-app/main/default/objects/Member__c/fields/main_tork_date_join_request_date__c.field-meta.xml
<CustomField>
    <fullName>main_tork_date_join_request_date__c</fullName>
    <formula>main_tork_date__c - join_request_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>申込から本登録までの日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>