force-app/main/default/objects/Member__c/fields/main_tork_date_SAM_First_bit__c.field-meta.xml
<CustomField>
    <fullName>main_tork_date_SAM_First_bit__c</fullName>
    <formula>DATEVALUE(SAM_First_bit_Date__c) - main_tork_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>本登録から初回入札までの日数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>