force-app/main/default/objects/Member__c/fields/Member_memo__c.field-meta.xml
<CustomField>
    <fullName>Member_memo__c</fullName>
    <label>会員メモ</label>
    <type>TextArea</type>
</CustomField>