force-app/main/default/objects/Member__c/fields/member_memo_write__c.field-meta.xml
<CustomField>
    <fullName>member_memo_write__c</fullName>
    <label>会員メモ（記載用）</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>