force-app/main/default/objects/Member__c/fields/member_nm_kana__c.field-meta.xml
<CustomField>
    <fullName>member_nm_kana__c</fullName>
    <label>会員名カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>