force-app/main/default/objects/Member__c/fields/Member_rank_yard__c.field-meta.xml
<CustomField>
    <fullName>Member_rank_yard__c</fullName>
    <formula>IF(
    ISBLANK(First_Auction_Date_in_Yard_Storage__c),
    &quot;新規&quot;,
    IF(
        Last_Auction_Date_in_Yard_Storage__c &gt;= TODAY() - 180,
        &quot;既存&quot;,
        &quot;過去既存&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ヤード保管　会員ランク</label>
    <type>Text</type>
</CustomField>