force-app/main/default/objects/Member__c/fields/Member_rank_yard_before__c.field-meta.xml
<CustomField>
    <fullName>Member_rank_yard_before__c</fullName>
    <label>ヤード保管　会員ランク（月初）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新規</fullName>
            </value>
            <value>
                <fullName>既存</fullName>
            </value>
            <value>
                <fullName>過去既存</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>