force-app/main/default/objects/Member__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <label>メモ</label>
    <type>TextArea</type>
</CustomField>