force-app/main/default/objects/Member__c/fields/mobile_tel_no__c.field-meta.xml
<CustomField>
    <fullName>mobile_tel_no__c</fullName>
    <label>担当者連絡先</label>
    <type>Phone</type>
</CustomField>