force-app/main/default/objects/Member__c/fields/need_English__c.field-meta.xml
<CustomField>
    <fullName>need_English__c</fullName>
    <defaultValue>false</defaultValue>
    <label>国内英語対応</label>
    <type>Checkbox</type>
</CustomField>