force-app/main/default/objects/Member__c/fields/New_PIC__c.field-meta.xml
<CustomField>
    <fullName>New_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>下記フローで取得
初回落札日が更新されたら新規時担当者を更新
https://hanamaru870.lightning.force.com/builder_platform_interaction/flowBuilder.app?flowId=301Nn00000YRgKXIA1</description>
    <label>新規時担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_PIC</relationshipName>
    <type>Lookup</type>
</CustomField>