force-app/main/default/objects/Member__c/fields/new_pic_check__c.field-meta.xml
<CustomField>
    <fullName>new_pic_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>新規対応済みチェック</label>
    <type>Checkbox</type>
</CustomField>