force-app/main/default/objects/Member__c/fields/nkin_jkyo_kbn__c.field-meta.xml
<CustomField>
    <fullName>nkin_jkyo_kbn__c</fullName>
    <label>初回取引料</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>未払い</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>請求中</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>入金済</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>免除</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>