force-app/main/default/objects/Member__c/fields/Number_of_employee__c.field-meta.xml
<CustomField>
    <fullName>Number_of_employee__c</fullName>
    <label>従業員数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>