force-app/main/default/objects/Member__c/fields/Number_of_Export__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Export__c</fullName>
    <label>輸出先数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>