force-app/main/default/objects/Member__c/fields/Number_of_Parts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Parts__c</fullName>
    <label>パーツ・解体数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>