force-app/main/default/objects/Member__c/fields/Number_of_Repaire__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Repaire__c</fullName>
    <label>おこし数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>