force-app/main/default/objects/Member__c/fields/nyst_jkyo_kbn__c.field-meta.xml
<CustomField>
    <fullName>nyst_jkyo_kbn__c</fullName>
    <label>入札制限情報</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>入札不可</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>入札不可(自動)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>入札可</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>