force-app/main/default/objects/Member__c/fields/obic_check_date__c.field-meta.xml
<CustomField>
    <fullName>obic_check_date__c</fullName>
    <label>OBIC確認日</label>
    <type>Date</type>
</CustomField>