force-app/main/default/objects/Member__c/fields/oneprice_btn_disp_set_kbn__c.field-meta.xml
<CustomField>
    <fullName>oneprice_btn_disp_set_kbn__c</fullName>
    <label>ワンプライスボタン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>表示しない</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>表示する</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>