force-app/main/default/objects/Member__c/fields/overseas_address__c.field-meta.xml
<CustomField>
    <fullName>overseas_address__c</fullName>
    <label>海外住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>