force-app/main/default/objects/Member__c/fields/Overseas_branches__c.field-meta.xml
<CustomField>
    <fullName>Overseas_branches__c</fullName>
    <label>海外支店</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>