force-app/main/default/objects/Member__c/fields/owned_truck__c.field-meta.xml
<CustomField>
    <fullName>owned_truck__c</fullName>
    <label>所有トラック</label>
    <type>TextArea</type>
</CustomField>