force-app/main/default/objects/Member__c/fields/Parts__c.field-meta.xml
<CustomField>
    <fullName>Parts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>パーツ・解体</label>
    <referenceTo>Parts__c</referenceTo>
    <relationshipName>member_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>