force-app/main/default/objects/Member__c/fields/Past_contact_history__c.field-meta.xml
<CustomField>
    <fullName>Past_contact_history__c</fullName>
    <formula>&quot;https://www.hanamaru870.jp/clientinfo/clientinfoWinServlet?url=%2fclientinfo%2fclientinfoPtnServlet%2fclinfo0040%3fnp%3d11%26dumyFrame%3dy%26clinfo0010_client_base_id%3d&quot; &amp; client_base_id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>過去コンタクト履歴</label>
    <type>Text</type>
</CustomField>