force-app/main/default/objects/Member__c/fields/payment_deadline_days__c.field-meta.xml
<CustomField>
    <fullName>payment_deadline_days__c</fullName>
    <label>入金期限日数（クレジットor分割）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>