force-app/main/default/objects/Member__c/fields/payment_deadline_type__c.field-meta.xml
<CustomField>
    <fullName>payment_deadline_type__c</fullName>
    <label>入金期限基準</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>請求書発行日</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>BL発行日</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>ETD</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>ETA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>