force-app/main/default/objects/Member__c/fields/payment_due_date_detail_kbn__c.field-meta.xml
<CustomField>
    <fullName>payment_due_date_detail_kbn__c</fullName>
    <label>支払予定日詳細区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>都度</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>翌月20日支払</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>翌月25日支払</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>翌月月末支払</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>翌週月曜日支払</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>翌週火曜日支払</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>翌週水曜日支払</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>翌週木曜日支払</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>翌週金曜日支払</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>翌月5日支払</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>翌月10日支払</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>翌月15日支払</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>