force-app/main/default/objects/Member__c/fields/payment_method__c.field-meta.xml
<CustomField>
    <fullName>payment_method__c</fullName>
    <label>決済種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>一括</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>分割(一般)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>分割(特殊)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>一括 or 分割(通常)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>一括 or クレジット</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>分割 or クレジット</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>L/C</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>一括　or　L/C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>