force-app/main/default/objects/Member__c/fields/perfect_bank_account__c.field-meta.xml
<CustomField>
    <fullName>perfect_bank_account__c</fullName>
    <label>パーフェクト利用口座番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>