force-app/main/default/objects/Member__c/fields/PIC_text__c.field-meta.xml
<CustomField>
    <fullName>PIC_text__c</fullName>
    <formula>sale_tant_cd__r.LastName &amp; &quot; &quot; &amp; sale_tant_cd__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>販売会員情報（分析用）</label>
    <type>Text</type>
</CustomField>