force-app/main/default/objects/Member__c/fields/pms_i_ymd_file_id1__c.field-meta.xml
<CustomField>
    <fullName>pms_i_ymd_file_id1__c</fullName>
    <label>パスポートアップロード日時</label>
    <type>DateTime</type>
</CustomField>