force-app/main/default/objects/Member__c/fields/pms_i_ymd_file_id4__c.field-meta.xml
<CustomField>
    <fullName>pms_i_ymd_file_id4__c</fullName>
    <label>古物商アップロード日時</label>
    <type>DateTime</type>
</CustomField>