force-app/main/default/objects/Member__c/fields/pms_u_ymd__c.field-meta.xml
<CustomField>
    <fullName>pms_u_ymd__c</fullName>
    <label>最新アップロード日時</label>
    <type>DateTime</type>
</CustomField>