force-app/main/default/objects/Member__c/fields/postal_code__c.field-meta.xml
<CustomField>
    <fullName>postal_code__c</fullName>
    <label>郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>