force-app/main/default/objects/Member__c/fields/precautions__c.field-meta.xml
<CustomField>
    <fullName>precautions__c</fullName>
    <label>注意事項等</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>