force-app/main/default/objects/Member__c/fields/provided_service__c.field-meta.xml
<CustomField>
    <fullName>provided_service__c</fullName>
    <label>提供サービス</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAM</fullName>
            </value>
            <value>
                <fullName>代理出品</fullName>
            </value>
            <value>
                <fullName>Aucbid</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>解体ヤード</fullName>
            </value>
            <value>
                <fullName>代行シッピング</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>