force-app/main/default/objects/Member__c/fields/proxy_commission_kbn__c.field-meta.xml
<CustomField>
    <fullName>proxy_commission_kbn__c</fullName>
    <label>代理出品手数料</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Ａ設定(通常→出1万成1.2万・再出品4回目以降)</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Ｂ設定(20万以下→出5千 成1万・再出品5回目以降)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Ｃ設定(10万以下→出5千 成1万・再出品5回目以降)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Ｄ設定(20万以下→出5千 成1万・再出品4回目以降)</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>T設定（出/成 2.5万）</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>