force-app/main/default/objects/Member__c/fields/proxy_memo__c.field-meta.xml
<CustomField>
    <fullName>proxy_memo__c</fullName>
    <label>代理出品メモ</label>
    <type>TextArea</type>
</CustomField>