force-app/main/default/objects/Member__c/fields/proxy_rank__c.field-meta.xml
<CustomField>
    <fullName>proxy_rank__c</fullName>
    <description>A=代理出品をしており、他社にも出品している
B=他社にのみ出品している
C=事故車の取り扱いが無い</description>
    <inlineHelpText>A=代理出品をしており、他社にも出品している。
B=他社にのみ出品している。
C=事故車の取り扱いが無い。</inlineHelpText>
    <label>代理出品ランク</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>