force-app/main/default/objects/Member__c/fields/proxy_setting_id__c.field-meta.xml
<CustomField>
    <fullName>proxy_setting_id__c</fullName>
    <label>代理設定ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>