force-app/main/default/objects/Member__c/fields/purchase_location__c.field-meta.xml
<CustomField>
    <fullName>purchase_location__c</fullName>
    <description>仕入先がどこから仕入れているのか。</description>
    <inlineHelpText>仕入先がどこから仕入れているのかを選択</inlineHelpText>
    <label>【国内】仕入れ場所</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>ストック</fullName>
            </value>
            <value>
                <fullName>部品・解体業者</fullName>
            </value>
            <value>
                <fullName>ディーラー・モータース</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>