force-app/main/default/objects/Member__c/fields/reapply_dt__c.field-meta.xml
<CustomField>
    <fullName>reapply_dt__c</fullName>
    <label>前回差し戻し日時</label>
    <type>DateTime</type>
</CustomField>