force-app/main/default/objects/Member__c/fields/reapply_item__c.field-meta.xml
<CustomField>
    <fullName>reapply_item__c</fullName>
    <label>差し戻し対象</label>
    <length>255</length>
    <type>Text</type>
</CustomField>