force-app/main/default/objects/Member__c/fields/reapply_mail_um__c.field-meta.xml
<CustomField>
    <fullName>reapply_mail_um__c</fullName>
    <label>差し戻しメール送信</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>送信する</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>送信しない</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>