force-app/main/default/objects/Member__c/fields/reapply_niyo__c.field-meta.xml
<CustomField>
    <fullName>reapply_niyo__c</fullName>
    <label>差し戻し内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>