force-app/main/default/objects/Member__c/fields/Reason_Black__c.field-meta.xml
<CustomField>
    <fullName>Reason_Black__c</fullName>
    <description>顧客台帳のみの項目
ブラックの定義付けと、それらを確認するために使用。
以下ブラックの規定
・長期未入金の強制キャンセルを本登録後3回した場合
・永抹期限を1回でも超過
・B車輌の搬出期限を守れなかった人
　→オークション課により売却時に都度確認を行うため、その時点で陸送を強制的に手配する</description>
    <label>ブラック設定理由</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未入金1回目</fullName>
            </value>
            <value>
                <fullName>未入金2回目</fullName>
            </value>
            <value>
                <fullName>未入金3回以上</fullName>
            </value>
            <value>
                <fullName>永抹期限超過のため</fullName>
            </value>
            <value>
                <fullName>B車輌搬出期限超過のため</fullName>
            </value>
            <value>
                <fullName>取引NG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>