force-app/main/default/objects/Member__c/fields/referral_agency__c.field-meta.xml
<CustomField>
    <fullName>referral_agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>この会員を紹介した代理店</description>
    <label>紹介代理店</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>販売会員情報 (紹介代理店)</relationshipLabel>
    <relationshipName>referral_agency</relationshipName>
    <type>Lookup</type>
</CustomField>