force-app/main/default/objects/Member__c/fields/related_company3__c.field-meta.xml
<CustomField>
    <fullName>related_company3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連企業3</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>販売会員情報 (販売会員情報)</relationshipLabel>
    <relationshipName>related_company3</relationshipName>
    <type>Lookup</type>
</CustomField>