force-app/main/default/objects/Member__c/fields/related_company_memo__c.field-meta.xml
<CustomField>
    <fullName>related_company_memo__c</fullName>
    <label>関連企業メモ</label>
    <type>TextArea</type>
</CustomField>