force-app/main/default/objects/Member__c/fields/related_tag1__c.field-meta.xml
<CustomField>
    <fullName>related_tag1__c</fullName>
    <description>関連企業との関連性</description>
    <label>関連性1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>親会社</fullName>
            </value>
            <value>
                <fullName>支店</fullName>
            </value>
            <value>
                <fullName>パートナー企業</fullName>
            </value>
            <value>
                <fullName>グループ会社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>