force-app/main/default/objects/Member__c/fields/relist_commission_kbn__c.field-meta.xml
<CustomField>
    <fullName>relist_commission_kbn__c</fullName>
    <label>再出品手数料</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>無</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>有</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>