force-app/main/default/objects/Member__c/fields/repair__c.field-meta.xml
<CustomField>
    <fullName>repair__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>おこし</label>
    <referenceTo>Repaire__c</referenceTo>
    <relationshipName>member_repair</relationshipName>
    <type>Lookup</type>
</CustomField>