force-app/main/default/objects/Member__c/fields/Reuse_account__c.field-meta.xml
<CustomField>
    <fullName>Reuse_account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>海外取引の場合、共通のリユースアカウントのため、だれに付与しているかがわからない。
ここにチェックをいれることで、すでに付与しているかを確認することが可能
SAMスタート後はフルオープンなので不要</description>
    <label>リユースアカウント付与</label>
    <type>Checkbox</type>
</CustomField>