force-app/main/default/objects/Member__c/fields/reuse_explain_day__c.field-meta.xml
<CustomField>
    <fullName>reuse_explain_day__c</fullName>
    <label>ユーザー保管説明日</label>
    <type>Date</type>
</CustomField>