force-app/main/default/objects/Member__c/fields/Role_text__c.field-meta.xml
<CustomField>
    <fullName>Role_text__c</fullName>
    <formula>sale_tant_cd__r.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>販売担当者ロール（分析用）</label>
    <type>Text</type>
</CustomField>