force-app/main/default/objects/Member__c/fields/sale_tant_cd__c.field-meta.xml
<CustomField>
    <fullName>sale_tant_cd__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売担当者名</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Auction_Informations_PersonInCharge</relationshipName>
    <type>Lookup</type>
</CustomField>