force-app/main/default/objects/Member__c/fields/Sales_Operations_Department_Memo__c.field-meta.xml
<CustomField>
    <fullName>Sales_Operations_Department_Memo__c</fullName>
    <label>販売業務課用メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>