force-app/main/default/objects/Member__c/fields/sales_regular_holiday__c.field-meta.xml
<CustomField>
    <fullName>sales_regular_holiday__c</fullName>
    <label>営業時間定休日</label>
    <type>TextArea</type>
</CustomField>