force-app/main/default/objects/Member__c/fields/sales_type__c.field-meta.xml
<CustomField>
    <fullName>sales_type__c</fullName>
    <label>販売形態</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>リテール</fullName>
            </value>
            <value>
                <fullName>オークション回し</fullName>
            </value>
            <value>
                <fullName>ブローカー</fullName>
            </value>
            <value>
                <fullName>国内オークション販売</fullName>
            </value>
            <value>
                <fullName>ホールセール</fullName>
            </value>
            <value>
                <fullName>自社運営のオークション</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>